--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
-    id 'org.jetbrains.kotlin.android'
 }
 
 android {
@@ -35,10 +34,6 @@ android {
         targetCompatibility JavaVersion.VERSION_11
     }
 
-    kotlinOptions {
-        jvmTarget = '11'
-    }
-
     lint {
         disable 'Instantiatable'
     }
@@ -47,8 +42,7 @@ android {
 dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.4'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
-    implementation 'androidx.fragment:fragment-ktx:1.8.5'
-    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    implementation 'androidx.fragment:fragment:1.8.5'  // Removed -ktx
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'com.google.code.gson:gson:2.11.0'
     implementation 'com.google.firebase:firebase-auth'
@@ -56,9 +50,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage'
     implementation 'com.squareup.okio:okio:3.9.1'
     implementation platform('com.google.firebase:firebase-bom:33.7.0')
-    implementation platform('org.jetbrains.kotlin:kotlin-bom:2.1.0')
 
-    //read image
+    //image handling
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 }
